add menu and sync image

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -9,7 +9,7 @@
     tools:context=".MenuActivity">
 
     <LinearLayout
-        android:id="@+id/menu"
+        android:id="@+id/menu_choose"
         android:layout_width="395dp"
         android:layout_height="176dp"
         android:background="?attr/colorPrimary"
@@ -41,6 +41,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="100dp"
-            android:text="OK" />
+            android:text="@string/ok" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
