--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -35,7 +35,7 @@
         android:layout_gravity="center_horizontal"
         android:maxLines="10"
         android:padding="8dp"
-        android:textSize="24dp"
+        android:textSize="24sp"
         android:text="" />
 
     <ImageView
@@ -50,8 +50,8 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="224px"
-        android:layout_height="224px"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_marginLeft="350dp"
         android:layout_marginTop="665dp"
         android:layout_marginRight="100dp"
@@ -66,5 +66,25 @@
         android:textSize="24dp"
         android:text="" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/numberSV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="620dp"
+        android:layout_marginLeft="460dp"
+        android:textSize="24dp"
+        android:text="0" />
 
+    <Button
+        android:id="@+id/btnfinish"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="890dp"
+        android:layout_marginLeft="250dp"
+        android:background="@drawable/mybutton"
+        android:padding="11dp"
+        android:textSize="30sp"
+        android:text="@string/finish"
+/>
+
+</FrameLayout>
