--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,5 +37,17 @@
             android:background="@drawable/mybutton"
             android:textSize="36sp"
             android:text="@string/sync" />
+        <Spinner
+            android:id="@+id/list_dir"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="5dp"
+
+
+            />
+
     </LinearLayout>
+
+
 </android.support.constraint.ConstraintLayout>
