--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -13,8 +13,8 @@
 
     <com.google.android.gms.samples.vision.face.facetracker.ui.camera.CameraSourcePreview
         android:id="@+id/preview"
-        android:layout_width="600dp"
-        android:layout_height="600dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@drawable/shadow">
 
 
