--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -29,9 +29,6 @@
         android:id="@+id/msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="550dp"
-        android:layout_marginLeft="100dp"
-        android:layout_marginRight="100dp"
         android:layout_gravity="center_horizontal"
         android:maxLines="10"
         android:padding="8dp"
@@ -40,29 +37,21 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="256px"
-        android:layout_height="256px"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="650dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="100dp"
+        android:layout_width="25px"
+        android:layout_height="25px"
         app:srcCompat="@android:drawable/title_bar" />
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginLeft="350dp"
-        android:layout_marginTop="665dp"
-        android:layout_marginRight="100dp"
+        android:layout_width="20px"
+        android:layout_height="20px"
         app:srcCompat="@android:color/transparent" />
 
     <TextView
         android:id="@+id/nameClass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="620dp"
-        android:layout_marginLeft="60dp"
+
         android:textSize="24dp"
         android:text="" />
 
@@ -70,8 +59,6 @@
         android:id="@+id/numberSV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="620dp"
-        android:layout_marginLeft="400dp"
         android:textSize="34dp"
         android:text="0" />
 
@@ -79,8 +66,7 @@
         android:id="@+id/btnfinish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="890dp"
-        android:layout_marginLeft="250dp"
+        android:layout_gravity="center_horizontal|bottom"
         android:background="@drawable/mybutton"
         android:padding="11dp"
         android:textSize="30sp"
