--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -32,8 +32,9 @@
         android:layout_gravity="center_horizontal"
         android:maxLines="10"
         android:padding="8dp"
-        android:textSize="30sp"
-        android:text="" />
+        android:text=""
+        android:textColor="#FF0000"
+        android:textSize="30sp" />
 
     <ImageView
         android:id="@+id/imageView3"
